# bartleby

./: .editorconfig  .gitignore  LICENSE  Makefile  PRD.md  README.md  TASKS.md  agents.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: vertical-slice.md
ops/: .env.example  Caddyfile  RESTORE.md  deploy.sh  docker-compose.yml  litestream.yml
server/: .env.example  .prettierignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
server/src/: config.test.ts  config.ts  http.test.ts  (+11 more)
tui/: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
tui/src/bartleby_tui/: __init__.py  app.py  auth.py  awareness.py  connection.py  editing.py  editor.py  modals.py  notes_api.py  notes_list.py  panes.py  protocol.py  renderer.py  status_bar.py
tui/tests/: conftest.py  q002_tui_peer.py  test_app.py  test_app_editing.py  test_app_layout.py  test_app_renderer.py  test_auth.py  test_awareness.py  test_backlink_follow.py  test_backlinks_pane.py  test_bootstrap.py  test_code_highlight.py  test_comments_pane.py  test_connection.py  test_crud.py  test_editing.py  test_editor.py  test_export.py  test_help.py  test_history_pane.py  test_inbox_pane.py  test_note_nav.py  test_notes_list.py  test_offline.py  test_palette.py  test_pickers.py  test_protocol.py  test_renderer.py  test_search.py  test_status_bar.py  test_tag_filter.py  test_trash_pane.py
web/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+216 files in other folders)
