[project]
name = "bartleby-tui"
version = "0.1.0"
description = "Bartleby terminal client — collaborative markdown notes for a tiny friend group."
readme = "README.md"
authors = [
    { name = "Evan Appel", email = "appelew@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
    "websockets>=14",
    "y-py>=0.6.2",
]

[project.scripts]
bartleby-tui = "bartleby_tui:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

# Tool configuration. Dependency lists above are managed via `uv add` per
# agents.md; this section is hand-edited.
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.ty.src]
include = ["src", "tests"]
